--- a/package.json
+++ b/package.json
@@ -9,7 +9,26 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^4.0.1",
+    "axios": "^0.24.0",
+    "eslint": "^7.32.0",
+    "faker": "^5.5.3",
+    "formik": "^2.2.9",
+    "react-hook-form": "^7.17.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "recharts": "^2.1.5",
+    "redux": "^4.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
